--- a/pkg/registry/extensions/ingress/storage/BUILD
+++ b/pkg/registry/extensions/ingress/storage/BUILD
@@ -12,6 +12,7 @@ go_test(
     importpath = "k8s.io/kubernetes/pkg/registry/extensions/ingress/storage",
     library = ":go_default_library",
     deps = [
+        "//pkg/api/legacyscheme:go_default_library",
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/extensions:go_default_library",
         "//pkg/registry/registrytest:go_default_library",
@@ -21,6 +22,7 @@ go_test(
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/registry/generic:go_default_library",
+        "//vendor/k8s.io/apiserver/pkg/registry/generic/testing:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/storage/etcd/testing:go_default_library",
     ],
 )
