--- a/pkg/registry/settings/podpreset/storage/BUILD
+++ b/pkg/registry/settings/podpreset/storage/BUILD
@@ -38,6 +38,7 @@ go_test(
     importpath = "k8s.io/kubernetes/pkg/registry/settings/podpreset/storage",
     library = ":go_default_library",
     deps = [
+        "//pkg/api/legacyscheme:go_default_library",
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/settings:go_default_library",
         "//pkg/registry/registrytest:go_default_library",
@@ -46,6 +47,7 @@ go_test(
         "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/registry/generic:go_default_library",
+        "//vendor/k8s.io/apiserver/pkg/registry/generic/testing:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/storage/etcd/testing:go_default_library",
     ],
 )
