--- a/pkg/registry/storage/volumeattachment/storage/BUILD
+++ b/pkg/registry/storage/volumeattachment/storage/BUILD
@@ -20,6 +20,7 @@ go_test(
     importpath = "k8s.io/kubernetes/pkg/registry/storage/volumeattachment/storage",
     library = ":go_default_library",
     deps = [
+        "//pkg/api/legacyscheme:go_default_library",
         "//pkg/api/testapi:go_default_library",
         "//pkg/apis/storage:go_default_library",
         "//pkg/registry/registrytest:go_default_library",
@@ -29,6 +30,7 @@ go_test(
         "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/registry/generic:go_default_library",
+        "//vendor/k8s.io/apiserver/pkg/registry/generic/testing:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/storage/etcd/testing:go_default_library",
     ],
 )
