--- a/cluster/addons/metadata-proxy/gce/metadata-proxy.yaml
+++ b/cluster/addons/metadata-proxy/gce/metadata-proxy.yaml
@@ -38,32 +38,26 @@ spec:
       dnsPolicy: Default
       containers:
       - name: metadata-proxy
-        image: gcr.io/google_containers/metadata-proxy:v0.1.4
+        image: gcr.io/google-containers/metadata-proxy:0.1.3
+        imagePullPolicy: Always
         securityContext:
           privileged: true
-        resources:
-          requests:
-            memory: "16Mi"
-            cpu: "15m"
-          limits:
-            memory: "16Mi"
-            cpu: "15m"
-      # BEGIN_PROMETHEUS_TO_SD
-      - name: prometheus-to-sd-exporter
-        image: gcr.io/google_containers/prometheus-to-sd:v0.2.2
         command:
-          - /monitor
-          - --stackdriver-prefix={{ prometheus_to_sd_prefix }}/addons
-          - --api-override={{ prometheus_to_sd_endpoint }}
-          - --source=metadata_proxy:http://127.0.0.1:989?whitelisted=request_count
+          - '/start-proxy.sh'
         resources:
           requests:
-            memory: "16Mi"
-            cpu: "15m"
+            memory: "32Mi"
+            cpu: "30m"
           limits:
-            memory: "16Mi"
-            cpu: "15m"
-      # END_PROMETHEUS_TO_SD
+            memory: "32Mi"
+            cpu: "30m"
+        volumeMounts:
+          - name: config-volume
+            mountPath: /etc/nginx/
       nodeSelector:
         beta.kubernetes.io/metadata-proxy-ready: "true"
       terminationGracePeriodSeconds: 30
+      volumes:
+      - name: config-volume
+        configMap:
+          name: metadata-proxy-config
