Fix cross-compliation of mount_exec.go
Add dummy implementation for non-linux platforms

--- a/pkg/util/mount/BUILD
+++ b/pkg/util/mount/BUILD
@@ -11,6 +11,7 @@ go_library(
     srcs = [
         "doc.go",
         "exec.go",
+        "exec_mount_unsupported.go",
         "fake.go",
         "mount.go",
         "mount_unsupported.go",
