--- a/cmd/kubeadm/app/constants/BUILD
+++ b/cmd/kubeadm/app/constants/BUILD
@@ -12,6 +12,7 @@ go_library(
     importpath = "k8s.io/kubernetes/cmd/kubeadm/app/constants",
     deps = [
         "//pkg/util/version:go_default_library",
+        "//pkg/version:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
     ],
 )
