--- a/pkg/kubectl/cmd/util/BUILD
+++ b/pkg/kubectl/cmd/util/BUILD
@@ -9,6 +9,7 @@ go_library(
     srcs = [
         "cached_discovery.go",
         "clientcache.go",
+        "discovery.go",
         "factory.go",
         "factory_builder.go",
         "factory_client_access.go",
